Blog Post Tags spacing fix (DT-1266)

--- a/css/widgets-blog.less
+++ b/css/widgets-blog.less
@@ -1,4 +1,4 @@
-// BLOG WIDGETS =============================================================================================
+blog-post-metadata// BLOG WIDGETS =============================================================================================
 @bp-blog-compact: ~"only screen and (max-width : 1000px)";
 @bp-blog-small: ~"only screen and (max-width : 800px)";
 
@@ -303,6 +303,8 @@
 				}
 				ol.blog-post-tags-list {
 					.blog-post-tag {
+						display: inline-block;
+						margin: 0 0.1em 0.4em 0;
 						a {
 							display: inline-block;
 							padding: 0em 0.7em;
